Enable regexp-dotall tests - feature is already supported
The 's' flag (dotAll) for RegExp has been implemented in Rhino but was
still marked as unsupported in the test suite. Enable these tests.

Fixes 10 test262 tests including:
- dotall/with-dotall.js
- dotall/with-dotall-unicode.js
- prototype/dotAll/* (6 of 8 tests)
- prototype/flags/coercion-dotall.js
- prototype/flags/rethrow.js

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -11,7 +11,7 @@ annexB/built-ins 40/241 (16.6%)
     RegExp/legacy-accessors/rightContext 4/4 (100.0%)
     RegExp/prototype/compile/this-cross-realm-instance.js
     RegExp/prototype/compile/this-subclass-instance.js
-    RegExp/prototype/flags/order-after-compile.js {unsupported: [regexp-dotall]}
+    RegExp/prototype/flags/order-after-compile.js
     RegExp/prototype/Symbol.split/Symbol.match-getter-recompiles-source.js
     RegExp/incomplete_hex_unicode_escape.js
     RegExp/RegExp-leading-escape-BMP.js
@@ -1239,10 +1239,8 @@ built-ins/Proxy 44/311 (14.15%)
 
 built-ins/Reflect 0/153 (0.0%)
 
-built-ins/RegExp 920/1868 (49.25%)
+built-ins/RegExp 910/1868 (48.72%)
     CharacterClassEscapes 12/12 (100.0%)
-    dotall/with-dotall.js {unsupported: [regexp-dotall]}
-    dotall/with-dotall-unicode.js {unsupported: [regexp-dotall]}
     escape 20/20 (100.0%)
     match-indices/indices-array.js
     match-indices/indices-array-element.js
@@ -1261,17 +1259,16 @@ built-ins/RegExp 920/1868 (49.25%)
     property-escapes 144/144 (100.0%)
     property-escapes/generated 431/431 (100.0%)
     property-escapes/generated/strings 28/28 (100.0%)
-    prototype/dotAll 8/8 (100.0%)
+    prototype/dotAll/cross-realm.js
+    prototype/dotAll/this-val-regexp-prototype.js
     prototype/exec/duplicate-named-indices-groups-properties.js
     prototype/exec/failure-lastindex-access.js
     prototype/exec/regexp-builtin-exec-v-u-flag.js {unsupported: [regexp-unicode-property-escapes]}
     prototype/exec/S15.10.6.2_A5_T3.js
     prototype/exec/success-lastindex-access.js
-    prototype/flags/coercion-dotall.js {unsupported: [regexp-dotall]}
-    prototype/flags/get-order.js {unsupported: [regexp-dotall]}
-    prototype/flags/rethrow.js {unsupported: [regexp-dotall]}
-    prototype/flags/return-order.js {unsupported: [regexp-dotall]}
-    prototype/flags/this-val-regexp.js {unsupported: [regexp-dotall]}
+    prototype/flags/get-order.js
+    prototype/flags/return-order.js
+    prototype/flags/this-val-regexp.js
     prototype/global/cross-realm.js
     prototype/global/this-val-regexp-prototype.js
     prototype/hasIndices 8/8 (100.0%)
@@ -1321,7 +1318,7 @@ built-ins/RegExp 920/1868 (49.25%)
     call_with_non_regexp_same_constructor.js
     call_with_regexp_match_falsy.js
     call_with_regexp_not_same_constructor.js
-    duplicate-flags.js {unsupported: [regexp-dotall]}
+    duplicate-flags.js
     from-regexp-like.js
     from-regexp-like-flag-override.js
     from-regexp-like-get-ctor-err.js
