Implement AsyncFromSyncIterator for yield* in async generators
When yield* is used in an async generator on an object that only has
@@iterator (not @@asyncIterator), the sync iterator must be wrapped in
an AsyncFromSyncIterator per ES2018 spec.

Key changes:
- Add AsyncFromSyncIterator class implementing the async wrapper
- Cache the next method at iterator creation time per spec
- Handle Promise value unwrapping for yielded Promises
- Access done before value per spec ordering requirements
- Update ES6AsyncGenerator to use AsyncFromSyncIterator for yield*
  on sync iterables
- Extract resolved values synchronously from immediately-resolved
  Promises to work around Rhino's await bug with .then() chains

This fixes many yield-star-sync-* test262 tests for async generators.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -478,16 +478,33 @@ built-ins/AsyncDisposableStack 52/52 (100.0%)
     prototype-from-newtarget-custom.js
     undefined-newtarget-throws.js
 
-built-ins/AsyncFromSyncIteratorPrototype 9/38 (23.68%)
+built-ins/AsyncFromSyncIteratorPrototype 26/38 (68.42%)
     next/for-await-next-rejected-promise-close.js
     next/iterator-result-poisoned-wrapper.js
     next/next-result-poisoned-wrapper.js
     next/yield-iterator-next-rejected-promise-close.js
     next/yield-next-rejected-promise-close.js
+    return/iterator-result-poisoned-done.js
     return/iterator-result-poisoned-value.js
+    return/iterator-result-unwrap-promise.js
+    return/poisoned-get-return.js
+    return/poisoned-return.js
+    return/result-object-error.js
+    return/return-undefined.js
+    throw/iterator-result-poisoned-done.js
     throw/iterator-result-poisoned-value.js
     throw/iterator-result-rejected-promise-close.js
+    throw/iterator-result-unwrap-promise.js
+    throw/poisoned-get-throw.js
+    throw/poisoned-throw.js
+    throw/result-object-error.js
+    throw/throw-null.js
     throw/throw-result-poisoned-wrapper.js
+    throw/throw-undefined.js
+    throw/throw-undefined-get-return-undefined.js
+    throw/throw-undefined-poisoned-return.js
+    throw/throw-undefined-return-not-object.js
+    throw/throw-undefined-return-object.js
 
 built-ins/AsyncFunction 8/18 (44.44%)
     AsyncFunction-construct.js
@@ -2978,7 +2995,7 @@ language/expressions/async-function 17/93 (18.28%)
     nameless-unscopables-with.js non-strict
     nameless-unscopables-with-in-nested-fn.js non-strict
 
-language/expressions/async-generator 60/623 (9.63%)
+language/expressions/async-generator 54/623 (8.67%)
     dstr/dflt-obj-ptrn-prop-eval-err.js
     dstr/named-dflt-obj-ptrn-prop-eval-err.js
     dstr/named-obj-ptrn-prop-eval-err.js
@@ -3002,7 +3019,6 @@ language/expressions/async-generator 60/623 (9.63%)
     named-yield-promise-reject-next-catch.js
     named-yield-promise-reject-next-for-await-of-async-iterator.js
     named-yield-promise-reject-next-yield-star-async-iterator.js
-    named-yield-promise-reject-next-yield-star-sync-iterator.js
     named-yield-spread-obj.js compiled
     named-yield-star-async-next.js
     named-yield-star-async-return.js
@@ -3012,10 +3028,8 @@ language/expressions/async-generator 60/623 (9.63%)
     named-yield-star-getiter-async-not-callable-object-throw.js
     named-yield-star-getiter-async-not-callable-string-throw.js
     named-yield-star-getiter-async-not-callable-symbol-throw.js
-    named-yield-star-next-then-get-abrupt.js
+    named-yield-star-next-non-object-ignores-then.js
     named-yield-star-next-then-returns-abrupt.js
-    named-yield-star-sync-next.js
-    named-yield-star-sync-return.js
     named-yield-star-sync-throw.js
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
@@ -3024,7 +3038,6 @@ language/expressions/async-generator 60/623 (9.63%)
     yield-promise-reject-next-catch.js
     yield-promise-reject-next-for-await-of-async-iterator.js
     yield-promise-reject-next-yield-star-async-iterator.js
-    yield-promise-reject-next-yield-star-sync-iterator.js
     yield-spread-obj.js compiled
     yield-star-async-next.js
     yield-star-async-return.js
@@ -3034,10 +3047,8 @@ language/expressions/async-generator 60/623 (9.63%)
     yield-star-getiter-async-not-callable-object-throw.js
     yield-star-getiter-async-not-callable-string-throw.js
     yield-star-getiter-async-not-callable-symbol-throw.js
-    yield-star-next-then-get-abrupt.js
+    yield-star-next-non-object-ignores-then.js
     yield-star-next-then-returns-abrupt.js
-    yield-star-sync-next.js
-    yield-star-sync-return.js
     yield-star-sync-throw.js
 
 language/expressions/await 14/22 (63.64%)
@@ -3073,12 +3084,11 @@ language/expressions/call 7/92 (7.61%)
     tco-non-eval-global.js {unsupported: [tail-call-optimization]}
     tco-non-eval-with.js {unsupported: [tail-call-optimization]}
 
-language/expressions/class 976/4059 (24.05%)
+language/expressions/class 964/4059 (23.75%)
     async-gen-method-static/yield-promise-reject-next.js
     async-gen-method-static/yield-promise-reject-next-catch.js
     async-gen-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
     async-gen-method-static/yield-promise-reject-next-yield-star-async-iterator.js
-    async-gen-method-static/yield-promise-reject-next-yield-star-sync-iterator.js
     async-gen-method-static/yield-spread-obj.js compiled
     async-gen-method-static/yield-star-async-next.js
     async-gen-method-static/yield-star-async-return.js
@@ -3088,16 +3098,13 @@ language/expressions/class 976/4059 (24.05%)
     async-gen-method-static/yield-star-getiter-async-not-callable-object-throw.js
     async-gen-method-static/yield-star-getiter-async-not-callable-string-throw.js
     async-gen-method-static/yield-star-getiter-async-not-callable-symbol-throw.js
-    async-gen-method-static/yield-star-next-then-get-abrupt.js
+    async-gen-method-static/yield-star-next-non-object-ignores-then.js
     async-gen-method-static/yield-star-next-then-returns-abrupt.js
-    async-gen-method-static/yield-star-sync-next.js
-    async-gen-method-static/yield-star-sync-return.js
     async-gen-method-static/yield-star-sync-throw.js
     async-gen-method/yield-promise-reject-next.js
     async-gen-method/yield-promise-reject-next-catch.js
     async-gen-method/yield-promise-reject-next-for-await-of-async-iterator.js
     async-gen-method/yield-promise-reject-next-yield-star-async-iterator.js
-    async-gen-method/yield-promise-reject-next-yield-star-sync-iterator.js
     async-gen-method/yield-spread-obj.js compiled
     async-gen-method/yield-star-async-next.js
     async-gen-method/yield-star-async-return.js
@@ -3107,10 +3114,8 @@ language/expressions/class 976/4059 (24.05%)
     async-gen-method/yield-star-getiter-async-not-callable-object-throw.js
     async-gen-method/yield-star-getiter-async-not-callable-string-throw.js
     async-gen-method/yield-star-getiter-async-not-callable-symbol-throw.js
-    async-gen-method/yield-star-next-then-get-abrupt.js
+    async-gen-method/yield-star-next-non-object-ignores-then.js
     async-gen-method/yield-star-next-then-returns-abrupt.js
-    async-gen-method/yield-star-sync-next.js
-    async-gen-method/yield-star-sync-return.js
     async-gen-method/yield-star-sync-throw.js
     decorator/syntax/class-valid/decorator-member-expr-private-identifier.js
     decorator/syntax/valid 7/7 (100.0%)
@@ -3130,7 +3135,6 @@ language/expressions/class 976/4059 (24.05%)
     elements/async-gen-private-method-static/yield-promise-reject-next-catch.js
     elements/async-gen-private-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
     elements/async-gen-private-method-static/yield-promise-reject-next-yield-star-async-iterator.js
-    elements/async-gen-private-method-static/yield-promise-reject-next-yield-star-sync-iterator.js
     elements/async-gen-private-method-static/yield-spread-obj.js compiled
     elements/async-gen-private-method-static/yield-star-async-next.js
     elements/async-gen-private-method-static/yield-star-async-return.js
@@ -3140,16 +3144,13 @@ language/expressions/class 976/4059 (24.05%)
     elements/async-gen-private-method-static/yield-star-getiter-async-not-callable-object-throw.js
     elements/async-gen-private-method-static/yield-star-getiter-async-not-callable-string-throw.js
     elements/async-gen-private-method-static/yield-star-getiter-async-not-callable-symbol-throw.js
-    elements/async-gen-private-method-static/yield-star-next-then-get-abrupt.js
+    elements/async-gen-private-method-static/yield-star-next-non-object-ignores-then.js
     elements/async-gen-private-method-static/yield-star-next-then-returns-abrupt.js
-    elements/async-gen-private-method-static/yield-star-sync-next.js
-    elements/async-gen-private-method-static/yield-star-sync-return.js
     elements/async-gen-private-method-static/yield-star-sync-throw.js
     elements/async-gen-private-method/yield-promise-reject-next.js
     elements/async-gen-private-method/yield-promise-reject-next-catch.js
     elements/async-gen-private-method/yield-promise-reject-next-for-await-of-async-iterator.js
     elements/async-gen-private-method/yield-promise-reject-next-yield-star-async-iterator.js
-    elements/async-gen-private-method/yield-promise-reject-next-yield-star-sync-iterator.js
     elements/async-gen-private-method/yield-spread-obj.js compiled
     elements/async-gen-private-method/yield-star-async-next.js
     elements/async-gen-private-method/yield-star-async-return.js
@@ -3159,10 +3160,8 @@ language/expressions/class 976/4059 (24.05%)
     elements/async-gen-private-method/yield-star-getiter-async-not-callable-object-throw.js
     elements/async-gen-private-method/yield-star-getiter-async-not-callable-string-throw.js
     elements/async-gen-private-method/yield-star-getiter-async-not-callable-symbol-throw.js
-    elements/async-gen-private-method/yield-star-next-then-get-abrupt.js
+    elements/async-gen-private-method/yield-star-next-non-object-ignores-then.js
     elements/async-gen-private-method/yield-star-next-then-returns-abrupt.js
-    elements/async-gen-private-method/yield-star-sync-next.js
-    elements/async-gen-private-method/yield-star-sync-return.js
     elements/async-gen-private-method/yield-star-sync-throw.js
     elements/evaluation-error/computed-name-toprimitive-err.js compiled
     elements/evaluation-error/computed-name-toprimitive-returns-noncallable.js compiled
@@ -4245,7 +4244,7 @@ language/expressions/new.target 3/14 (21.43%)
     escaped-target.js
     value-via-reflect-construct.js
 
-language/expressions/object 85/1170 (7.26%)
+language/expressions/object 82/1170 (7.01%)
     dstr/async-gen-meth-dflt-obj-ptrn-prop-eval-err.js
     dstr/async-gen-meth-obj-ptrn-prop-eval-err.js
     dstr/gen-meth-dflt-obj-ptrn-prop-eval-err.js
@@ -4262,7 +4261,6 @@ language/expressions/object 85/1170 (7.26%)
     method-definition/async-gen-yield-promise-reject-next-catch.js
     method-definition/async-gen-yield-promise-reject-next-for-await-of-async-iterator.js
     method-definition/async-gen-yield-promise-reject-next-yield-star-async-iterator.js
-    method-definition/async-gen-yield-promise-reject-next-yield-star-sync-iterator.js
     method-definition/async-gen-yield-spread-obj.js compiled
     method-definition/async-gen-yield-star-async-next.js
     method-definition/async-gen-yield-star-async-return.js
@@ -4272,10 +4270,8 @@ language/expressions/object 85/1170 (7.26%)
     method-definition/async-gen-yield-star-getiter-async-not-callable-object-throw.js
     method-definition/async-gen-yield-star-getiter-async-not-callable-string-throw.js
     method-definition/async-gen-yield-star-getiter-async-not-callable-symbol-throw.js
-    method-definition/async-gen-yield-star-next-then-get-abrupt.js
+    method-definition/async-gen-yield-star-next-non-object-ignores-then.js
     method-definition/async-gen-yield-star-next-then-returns-abrupt.js
-    method-definition/async-gen-yield-star-sync-next.js
-    method-definition/async-gen-yield-star-sync-return.js
     method-definition/async-gen-yield-star-sync-throw.js
     method-definition/async-meth-escaped-async.js
     method-definition/async-meth-eval-var-scope-syntax-err.js non-strict
@@ -4978,7 +4974,7 @@ language/statements/async-function 7/74 (9.46%)
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
-language/statements/async-generator 33/301 (10.96%)
+language/statements/async-generator 29/301 (9.63%)
     dstr/dflt-obj-ptrn-prop-eval-err.js
     dstr/obj-ptrn-prop-eval-err.js
     eval-var-scope-syntax-err.js non-strict
@@ -4990,7 +4986,6 @@ language/statements/async-generator 33/301 (10.96%)
     yield-promise-reject-next-catch.js
     yield-promise-reject-next-for-await-of-async-iterator.js
     yield-promise-reject-next-yield-star-async-iterator.js
-    yield-promise-reject-next-yield-star-sync-iterator.js
     yield-return-then-getter-ticks.js
     yield-spread-obj.js compiled
     yield-star-async-from-sync-iterator-inaccessible.js
@@ -5002,14 +4997,11 @@ language/statements/async-generator 33/301 (10.96%)
     yield-star-getiter-async-not-callable-object-throw.js
     yield-star-getiter-async-not-callable-string-throw.js
     yield-star-getiter-async-not-callable-symbol-throw.js
-    yield-star-next-then-get-abrupt.js
+    yield-star-next-non-object-ignores-then.js
     yield-star-next-then-returns-abrupt.js
     yield-star-normal-notdone-iter-value-throws.js
-    yield-star-promise-not-unwrapped.js
     yield-star-return-notdone-iter-value-throws.js
     yield-star-return-then-getter-ticks.js
-    yield-star-sync-next.js
-    yield-star-sync-return.js
     yield-star-sync-throw.js
     yield-star-throw-notdone-iter-value-throws.js
 
@@ -5023,12 +5015,11 @@ language/statements/block 6/21 (28.57%)
 
 language/statements/break 0/20 (0.0%)
 
-language/statements/class 1051/4366 (24.07%)
+language/statements/class 1039/4366 (23.8%)
     async-gen-method-static/yield-promise-reject-next.js
     async-gen-method-static/yield-promise-reject-next-catch.js
     async-gen-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
     async-gen-method-static/yield-promise-reject-next-yield-star-async-iterator.js
-    async-gen-method-static/yield-promise-reject-next-yield-star-sync-iterator.js
     async-gen-method-static/yield-spread-obj.js compiled
     async-gen-method-static/yield-star-async-next.js
     async-gen-method-static/yield-star-async-return.js
@@ -5038,16 +5029,13 @@ language/statements/class 1051/4366 (24.07%)
     async-gen-method-static/yield-star-getiter-async-not-callable-object-throw.js
     async-gen-method-static/yield-star-getiter-async-not-callable-string-throw.js
     async-gen-method-static/yield-star-getiter-async-not-callable-symbol-throw.js
-    async-gen-method-static/yield-star-next-then-get-abrupt.js
+    async-gen-method-static/yield-star-next-non-object-ignores-then.js
     async-gen-method-static/yield-star-next-then-returns-abrupt.js
-    async-gen-method-static/yield-star-sync-next.js
-    async-gen-method-static/yield-star-sync-return.js
     async-gen-method-static/yield-star-sync-throw.js
     async-gen-method/yield-promise-reject-next.js
     async-gen-method/yield-promise-reject-next-catch.js
     async-gen-method/yield-promise-reject-next-for-await-of-async-iterator.js
     async-gen-method/yield-promise-reject-next-yield-star-async-iterator.js
-    async-gen-method/yield-promise-reject-next-yield-star-sync-iterator.js
     async-gen-method/yield-spread-obj.js compiled
     async-gen-method/yield-star-async-next.js
     async-gen-method/yield-star-async-return.js
@@ -5057,10 +5045,8 @@ language/statements/class 1051/4366 (24.07%)
     async-gen-method/yield-star-getiter-async-not-callable-object-throw.js
     async-gen-method/yield-star-getiter-async-not-callable-string-throw.js
     async-gen-method/yield-star-getiter-async-not-callable-symbol-throw.js
-    async-gen-method/yield-star-next-then-get-abrupt.js
+    async-gen-method/yield-star-next-non-object-ignores-then.js
     async-gen-method/yield-star-next-then-returns-abrupt.js
-    async-gen-method/yield-star-sync-next.js
-    async-gen-method/yield-star-sync-return.js
     async-gen-method/yield-star-sync-throw.js
     decorator/syntax/class-valid/decorator-member-expr-private-identifier.js
     decorator/syntax/valid 11/11 (100.0%)
@@ -5080,7 +5066,6 @@ language/statements/class 1051/4366 (24.07%)
     elements/async-gen-private-method-static/yield-promise-reject-next-catch.js
     elements/async-gen-private-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
     elements/async-gen-private-method-static/yield-promise-reject-next-yield-star-async-iterator.js
-    elements/async-gen-private-method-static/yield-promise-reject-next-yield-star-sync-iterator.js
     elements/async-gen-private-method-static/yield-spread-obj.js compiled
     elements/async-gen-private-method-static/yield-star-async-next.js
     elements/async-gen-private-method-static/yield-star-async-return.js
@@ -5090,16 +5075,13 @@ language/statements/class 1051/4366 (24.07%)
     elements/async-gen-private-method-static/yield-star-getiter-async-not-callable-object-throw.js
     elements/async-gen-private-method-static/yield-star-getiter-async-not-callable-string-throw.js
     elements/async-gen-private-method-static/yield-star-getiter-async-not-callable-symbol-throw.js
-    elements/async-gen-private-method-static/yield-star-next-then-get-abrupt.js
+    elements/async-gen-private-method-static/yield-star-next-non-object-ignores-then.js
     elements/async-gen-private-method-static/yield-star-next-then-returns-abrupt.js
-    elements/async-gen-private-method-static/yield-star-sync-next.js
-    elements/async-gen-private-method-static/yield-star-sync-return.js
     elements/async-gen-private-method-static/yield-star-sync-throw.js
     elements/async-gen-private-method/yield-promise-reject-next.js
     elements/async-gen-private-method/yield-promise-reject-next-catch.js
     elements/async-gen-private-method/yield-promise-reject-next-for-await-of-async-iterator.js
     elements/async-gen-private-method/yield-promise-reject-next-yield-star-async-iterator.js
-    elements/async-gen-private-method/yield-promise-reject-next-yield-star-sync-iterator.js
     elements/async-gen-private-method/yield-spread-obj.js compiled
     elements/async-gen-private-method/yield-star-async-next.js
     elements/async-gen-private-method/yield-star-async-return.js
@@ -5109,10 +5091,8 @@ language/statements/class 1051/4366 (24.07%)
     elements/async-gen-private-method/yield-star-getiter-async-not-callable-object-throw.js
     elements/async-gen-private-method/yield-star-getiter-async-not-callable-string-throw.js
     elements/async-gen-private-method/yield-star-getiter-async-not-callable-symbol-throw.js
-    elements/async-gen-private-method/yield-star-next-then-get-abrupt.js
+    elements/async-gen-private-method/yield-star-next-non-object-ignores-then.js
     elements/async-gen-private-method/yield-star-next-then-returns-abrupt.js
-    elements/async-gen-private-method/yield-star-sync-next.js
-    elements/async-gen-private-method/yield-star-sync-return.js
     elements/async-gen-private-method/yield-star-sync-throw.js
     elements/evaluation-error/computed-name-toprimitive-err.js compiled
     elements/evaluation-error/computed-name-toprimitive-returns-noncallable.js compiled
