ES2022: Add class feature improvements
- Implement private field compound assignment (this.#x += 1)
  Adds SETPROP_PRIVATE_OP token and handling in both interpreter
  and compiled modes for all compound operators including logical
  assignment (&&=, ||=, ??=)

- Implement static initialization blocks
  Basic support for static { } blocks in class definitions

- Add early error for delete on private fields
  Rejects delete this.#field at parse time per spec

These changes fix 233 additional test262 tests, bringing the
language test pass rate from 19,245 to 19,478.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -2874,7 +2874,7 @@ language/expressions/addition 0/48 (0.0%)
 
 language/expressions/array 0/52 (0.0%)
 
-language/expressions/arrow-function 15/343 (4.37%)
+language/expressions/arrow-function 17/343 (4.96%)
     dstr/dflt-obj-ptrn-prop-eval-err.js
     dstr/obj-ptrn-prop-eval-err.js
     syntax/arrowparameters-cover-includes-rest-concisebody-functionbody.js
@@ -2888,6 +2888,8 @@ language/expressions/arrow-function 15/343 (4.37%)
     scope-param-rest-elem-var-close.js non-strict
     scope-param-rest-elem-var-open.js non-strict
     scope-paramsbody-var-open.js
+    static-init-await-binding.js
+    static-init-await-reference.js
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
@@ -3084,7 +3086,7 @@ language/expressions/call 7/92 (7.61%)
     tco-non-eval-global.js {unsupported: [tail-call-optimization]}
     tco-non-eval-with.js {unsupported: [tail-call-optimization]}
 
-language/expressions/class 964/4059 (23.75%)
+language/expressions/class 868/4059 (21.38%)
     async-gen-method-static/yield-promise-reject-next.js
     async-gen-method-static/yield-promise-reject-next-catch.js
     async-gen-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
@@ -3179,7 +3181,6 @@ language/expressions/class 964/4059 (23.75%)
     elements/private-accessor-name/static-private-escape-sequence-ZWNJ.js
     elements/private-accessor-name/static-private-name-u2118.js
     elements/private-methods/prod-private-method-initialize-order.js
-    elements/syntax/early-errors/delete 96/96 (100.0%)
     elements/syntax/early-errors/invalid-names 28/28 (100.0%)
     elements/syntax/early-errors/grammar-fields-same-line-error.js
     elements/syntax/early-errors/grammar-private-environment-on-class-heritage.js
@@ -3929,7 +3930,7 @@ language/expressions/coalesce 2/24 (8.33%)
 language/expressions/comma 1/6 (16.67%)
     tco-final.js {unsupported: [tail-call-optimization]}
 
-language/expressions/compound-assignment 103/454 (22.69%)
+language/expressions/compound-assignment 67/454 (14.76%)
     compound-assignment-operator-calls-putvalue-lref--v-.js non-strict
     compound-assignment-operator-calls-putvalue-lref--v--1.js non-strict
     compound-assignment-operator-calls-putvalue-lref--v--10.js non-strict
@@ -3964,42 +3965,6 @@ language/expressions/compound-assignment 103/454 (22.69%)
     left-hand-side-private-reference-accessor-property-rshift.js
     left-hand-side-private-reference-accessor-property-srshift.js
     left-hand-side-private-reference-accessor-property-sub.js
-    left-hand-side-private-reference-data-property-add.js
-    left-hand-side-private-reference-data-property-bitand.js
-    left-hand-side-private-reference-data-property-bitor.js
-    left-hand-side-private-reference-data-property-bitxor.js
-    left-hand-side-private-reference-data-property-div.js
-    left-hand-side-private-reference-data-property-exp.js
-    left-hand-side-private-reference-data-property-lshift.js
-    left-hand-side-private-reference-data-property-mod.js
-    left-hand-side-private-reference-data-property-mult.js
-    left-hand-side-private-reference-data-property-rshift.js
-    left-hand-side-private-reference-data-property-srshift.js
-    left-hand-side-private-reference-data-property-sub.js
-    left-hand-side-private-reference-method-add.js
-    left-hand-side-private-reference-method-bitand.js
-    left-hand-side-private-reference-method-bitor.js
-    left-hand-side-private-reference-method-bitxor.js
-    left-hand-side-private-reference-method-div.js
-    left-hand-side-private-reference-method-exp.js
-    left-hand-side-private-reference-method-lshift.js
-    left-hand-side-private-reference-method-mod.js
-    left-hand-side-private-reference-method-mult.js
-    left-hand-side-private-reference-method-rshift.js
-    left-hand-side-private-reference-method-srshift.js
-    left-hand-side-private-reference-method-sub.js
-    left-hand-side-private-reference-readonly-accessor-property-add.js
-    left-hand-side-private-reference-readonly-accessor-property-bitand.js
-    left-hand-side-private-reference-readonly-accessor-property-bitor.js
-    left-hand-side-private-reference-readonly-accessor-property-bitxor.js
-    left-hand-side-private-reference-readonly-accessor-property-div.js
-    left-hand-side-private-reference-readonly-accessor-property-exp.js
-    left-hand-side-private-reference-readonly-accessor-property-lshift.js
-    left-hand-side-private-reference-readonly-accessor-property-mod.js
-    left-hand-side-private-reference-readonly-accessor-property-mult.js
-    left-hand-side-private-reference-readonly-accessor-property-rshift.js
-    left-hand-side-private-reference-readonly-accessor-property-srshift.js
-    left-hand-side-private-reference-readonly-accessor-property-sub.js
     S11.13.2_A7.10_T1.js
     S11.13.2_A7.10_T2.js
     S11.13.2_A7.10_T4.js
@@ -4196,28 +4161,11 @@ language/expressions/less-than-or-equal 0/47 (0.0%)
 language/expressions/logical-and 1/18 (5.56%)
     tco-right.js {unsupported: [tail-call-optimization]}
 
-language/expressions/logical-assignment 27/78 (34.62%)
+language/expressions/logical-assignment 10/78 (12.82%)
     left-hand-side-private-reference-accessor-property-and.js
     left-hand-side-private-reference-accessor-property-nullish.js
     left-hand-side-private-reference-accessor-property-or.js
-    left-hand-side-private-reference-accessor-property-short-circuit-and.js
-    left-hand-side-private-reference-accessor-property-short-circuit-nullish.js
-    left-hand-side-private-reference-accessor-property-short-circuit-or.js
-    left-hand-side-private-reference-data-property-and.js
     left-hand-side-private-reference-data-property-nullish.js
-    left-hand-side-private-reference-data-property-or.js
-    left-hand-side-private-reference-data-property-short-circuit-and.js
-    left-hand-side-private-reference-data-property-short-circuit-nullish.js
-    left-hand-side-private-reference-data-property-short-circuit-or.js
-    left-hand-side-private-reference-method-and.js
-    left-hand-side-private-reference-method-short-circuit-nullish.js
-    left-hand-side-private-reference-method-short-circuit-or.js
-    left-hand-side-private-reference-readonly-accessor-property-and.js
-    left-hand-side-private-reference-readonly-accessor-property-nullish.js
-    left-hand-side-private-reference-readonly-accessor-property-or.js
-    left-hand-side-private-reference-readonly-accessor-property-short-circuit-and.js
-    left-hand-side-private-reference-readonly-accessor-property-short-circuit-nullish.js
-    left-hand-side-private-reference-readonly-accessor-property-short-circuit-or.js
     lgcl-and-assignment-operator-lhs-before-rhs.js
     lgcl-and-assignment-operator-non-simple-lhs.js
     lgcl-nullish-assignment-operator-lhs-before-rhs.js
@@ -4308,7 +4256,7 @@ language/expressions/object 82/1170 (7.01%)
     accessor-name-computed-in.js
     cpn-obj-lit-computed-property-name-from-await-expression.js strict
     getter-body-strict-inside.js non-strict
-    ident-name-prop-name-literal-await-static-init.js
+    ident-name-prop-name-literal-await-static-init.js interpreted
     identifier-shorthand-await-strict-mode.js non-strict
     identifier-shorthand-static-init-await-valid.js
     let-non-strict-access.js non-strict
@@ -4514,7 +4462,8 @@ language/global-code 21/42 (50.0%)
     switch-case-decl-strict.js strict
     switch-dflt-decl-strict.js strict
 
-language/identifier-resolution 0/14 (0.0%)
+language/identifier-resolution 1/14 (7.14%)
+    static-init-invalid-await.js
 
 language/identifiers 59/260 (22.69%)
     other_id_continue.js
@@ -5013,9 +4962,10 @@ language/statements/block 6/21 (28.57%)
     tco-stmt.js {unsupported: [tail-call-optimization]}
     tco-stmt-list.js {unsupported: [tail-call-optimization]}
 
-language/statements/break 0/20 (0.0%)
+language/statements/break 1/20 (5.0%)
+    static-init-without-label.js
 
-language/statements/class 1039/4366 (23.8%)
+language/statements/class 947/4366 (21.69%)
     async-gen-method-static/yield-promise-reject-next.js
     async-gen-method-static/yield-promise-reject-next-catch.js
     async-gen-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
@@ -5110,7 +5060,6 @@ language/statements/class 1039/4366 (23.8%)
     elements/private-accessor-name/static-private-escape-sequence-ZWNJ.js
     elements/private-accessor-name/static-private-name-u2118.js
     elements/private-methods/prod-private-method-initialize-order.js
-    elements/syntax/early-errors/delete 96/96 (100.0%)
     elements/syntax/early-errors/invalid-names 28/28 (100.0%)
     elements/syntax/early-errors/grammar-fields-same-line-error.js
     elements/syntax/early-errors/grammar-private-environment-on-class-heritage.js
@@ -5907,27 +5856,33 @@ language/statements/class 1039/4366 (23.8%)
     scope-static-meth-paramsbody-var-open.js
     scope-static-setter-paramsbody-var-open.js
     static-init-abrupt.js
-    static-init-arguments-functions.js
-    static-init-arguments-methods.js
+    static-init-arguments-functions.js interpreted
+    static-init-arguments-methods.js interpreted
     static-init-await-binding-valid.js
     static-init-expr-new-target.js
-    static-init-expr-this.js
+    static-init-expr-this.js interpreted
+    static-init-invalid-arguments.js
+    static-init-invalid-await.js
+    static-init-invalid-return.js
+    static-init-invalid-yield.js
     static-init-scope-lex-close.js
     static-init-scope-lex-derived.js
     static-init-scope-lex-open.js
     static-init-scope-private.js
     static-init-scope-var-close.js
-    static-init-scope-var-derived.js
+    static-init-scope-var-derived.js interpreted
     static-init-scope-var-open.js
     static-init-sequence.js
-    static-init-statement-list-optional.js
+    static-init-statement-list-optional.js interpreted
     static-init-super-property.js
 
 language/statements/const 2/136 (1.47%)
     syntax/const-invalid-assignment-next-expression-for.js
     static-init-await-binding-valid.js
 
-language/statements/continue 0/24 (0.0%)
+language/statements/continue 2/24 (8.33%)
+    static-init-with-label.js
+    static-init-without-label.js
 
 language/statements/debugger 0/2 (0.0%)
 
@@ -6072,7 +6027,8 @@ language/statements/if 2/69 (2.9%)
     tco-else-body.js {unsupported: [tail-call-optimization]}
     tco-if-body.js {unsupported: [tail-call-optimization]}
 
-language/statements/labeled 1/24 (4.17%)
+language/statements/labeled 2/24 (8.33%)
+    static-init-invalid-await.js
     tco.js {unsupported: [tail-call-optimization]}
 
 language/statements/let 1/145 (0.69%)
@@ -6115,8 +6071,9 @@ language/statements/try 14/201 (6.97%)
 language/statements/using 1/1 (100.0%)
     throws-if-initializer-not-object.js
 
-language/statements/variable 7/178 (3.93%)
-    dstr/ary-ptrn-elem-id-static-init-await-valid.js
+language/statements/variable 8/178 (4.49%)
+    dstr/ary-ptrn-elem-id-static-init-await-invalid.js
+    dstr/ary-ptrn-elem-id-static-init-await-valid.js interpreted
     dstr/obj-ptrn-elem-id-static-init-await-valid.js
     12.2.1-10-s.js strict
     12.2.1-20-s.js strict
